cread two section - news and call to email

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,7 +27,7 @@
 
     <div class="container">
         <section class="notes">
-            <p class="blog">Blog</p>
+            <p class="title__blog">Blog</p>
             <h1 class="notes__name">Thoughts and words</h1>
             <div class="card__notes">
                 <div class="block_card_notes__img">
@@ -41,6 +41,110 @@
                     </div>
                 </div>
             </div>
+        </section>
+    </div>
+
+    <div class="container">
+        <section class="news">
+            <h2 class="title__news">Latest news</h2>
+            <div class="bord__news">
+                <div class="cards__news">
+                    <img class="cards_news__img" src="/assets/image/news1.jpg" alt="news1">
+                    <div class="title_cards__news">
+                        <div class="cards_category__news">
+                            <p class="category">Category <span class="data__category">November 22, 2021</span></p>
+                            <p class="title__category">Pitch termsheet backing validation focus release.</p>
+                        </div>
+                        <div class="block_autor_category__img">
+                            <img class="autor_category__img" src="/assets/image/Chandler Bing.jpg" alt="Chandler Bing_img">Chandler Bing
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cards__news">
+                    <img class="cards_news__img" src="/assets/image/news2.jpg" alt="news1">
+                    <div class="title_cards__news">
+                        <div class="cards_category__news">
+                            <p class="category">Category <span class="data__category">November 22, 2021</span></p>
+                            <p class="title__category">Seed round direct mailing non-disclosure agreement graphical user interface rockstar.</p>
+                        </div>
+                        <div class="block_autor_category__img">
+                            <img class="autor_category__img" src="/assets/image/Rachel Green.jpg" alt="Rachel Green_img">Chandler Bing
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cards__news">
+                    <img class="cards_news__img" src="/assets/image/news3.jpg" alt="news1">
+                    <div class="title_cards__news">
+                        <div class="cards_category__news">
+                            <p class="category">Category <span class="data__category">November 22, 2021</span></p>
+                            <p class="title__category">Beta prototype sales iPad gen-z marketing network effects value proposition</p>
+                        </div>
+                        <div class="block_autor_category__img">
+                            <img class="autor_category__img" src="/assets/image/Monica Geller.jpg" alt="Monica Geller_img">Chandler Bing
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cards__news">
+                    <img class="cards_news__img" src="/assets/image/news4.jpg" alt="news1">
+                    <div class="title_cards__news">
+                        <div class="cards_category__news">
+                            <p class="category">Category <span class="data__category">November 22, 2021</span></p>
+                            <p class="title__category">Pitch termsheet backing validation focus release.</p>
+                        </div>
+                        <div class="block_autor_category__img">
+                            <img class="autor_category__img" src="/assets/image/Chandler Bing.jpg" alt="Chandler Bing_img">Chandler Bing
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cards__news">
+                    <img class="cards_news__img" src="/assets/image/news5.jpg" alt="news1">
+                    <div class="title_cards__news">
+                        <div class="cards_category__news">
+                            <p class="category">Category <span class="data__category">November 22, 2021</span></p>
+                            <p class="title__category">Seed round direct mailing non-disclosure agreement graphical user interface rockstar.</p>
+                        </div>
+                        <div class="block_autor_category__img">
+                            <img class="autor_category__img" src="/assets/image/Rachel Green.jpg" alt="Rachel Green_img">Chandler Bing
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cards__news">
+                    <img class="cards_news__img" src="/assets/image/news6.jpg" alt="news1">
+                    <div class="title_cards__news">
+                        <div class="cards_category__news">
+                            <p class="category">Category <span class="data__category">November 22, 2021</span></p>
+                            <p class="title__category">Beta prototype sales iPad gen-z marketing network effects value proposition</p>
+                        </div>
+                        <div class="block_autor_category__img">
+                            <img class="autor_category__img" src="/assets/image/Monica Geller.jpg" alt="Monica Geller_img">Chandler Bing
+                        </div>
+                    </div>
+                </div>
+
+                <button class="btn" type="button">Load more</button>
+
+            </div>
+        </section>
+    </div>
+
+    <div class="container">
+        <section class="call_to_active">
+            <div class="bord__call_to_active">
+                <img class="ellips" src="/assets/image/Ellipse.svg" alt="Ellipse">
+                <div class="block__active">
+                        <p class="title__active">An enterprise template to ramp up your company website</p>
+                    <div class="block_input__active">
+                        <input class="input__email" type="email" placeholder="Your email address">
+                        <button class="btn">Start now</button>
+                    </div>
+                </div>
+            </div>
+
         </section>
     </div>
 
