cread footer and finish desctop landing

--- a/index.html
+++ b/index.html
@@ -125,10 +125,8 @@
                         </div>
                     </div>
                 </div>
-
-                <button class="btn" type="button">Load more</button>
-
             </div>
+            <button class="btn" type="button">Load more</button>
         </section>
     </div>
 
@@ -138,14 +136,48 @@
                 <img class="ellips" src="/assets/image/Ellipse.svg" alt="Ellipse">
                 <div class="block__active">
                         <p class="title__active">An enterprise template to ramp up your company website</p>
-                    <div class="block_input__active">
-                        <input class="input__email" type="email" placeholder="Your email address">
-                        <button class="btn">Start now</button>
-                    </div>
+                        <div class="block_input__active">
+                            <input class="input__email" type="email" placeholder="Your email address">
+                            <button class="btn" type="submit">Start now</button>
+                        </div>
                 </div>
             </div>
-
         </section>
+    </div>
+
+    <div class="container">
+        <footer class="footer">
+            <div class="footer__information">
+                <a href="#" class="logo__link"> 
+                    <img class="logo__img" src="/assets/image/Logo_Boldo.svg" alt="logo"> Boldo
+                </a>
+                <p class="footer__title">Social media validation business model canvas graphical user interface launch party creative facebook iPad twitter.</p>
+                <p class="footer_other__title">All rights reserved.</p>
+            </div>
+
+            <nav class="footer__nav">
+                <div class="footer_nav__block">
+                    <p class="footer_nav__title">Landings</p>
+                    <a class="footer_nav__link" href="#">Home</a>
+                    <a class="footer_nav__link" href="#">Products</a>
+                    <a class="footer_nav__link" href="#">Services</a>
+                </div>
+
+                <div class="footer_nav__block">
+                    <p class="footer_nav__title">Company</p>
+                    <a class="footer_nav__link" href="#">Home</a>
+                    <a class="footer_nav__link" href="#">Careers</a>
+                    <a class="footer_nav__link" href="#">Services</a>
+                </div>
+
+                <div class="footer_nav__block">
+                    <p class="footer_nav__title">Resources</p>
+                    <a class="footer_nav__link" href="#">Blog</a>
+                    <a class="footer_nav__link" href="#">Products</a>
+                    <a class="footer_nav__link" href="#">Services</a>
+                </div>
+            </nav>
+        </footer>
     </div>
 
 </body>
