--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 
                 <button class="btn" type="button">Log in</button>
             </nav>
+            <button class="burger-menu" type="button">
+                <img class="burger-menu__icon" src="/assets/image/burger-menu.svg" alt="burger-menu">
+            </button>
         </header>
     </div>
 
